<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">
        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/clp_toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/detail_image_height"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginStart="10dp"
            app:expandedTitleMarginEnd="10dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:transitionName="shareView"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.7"
                app:layout_scrollFlags="scroll|snap|enterAlways|enterAlwaysCollapsed">
                <ImageView
                    android:id="@+id/detail_bar_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom"
                    android:background="@drawable/bottom_black_bg"/>
                <TextView
                    android:id="@+id/detail_bar_copyright"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|bottom"
                    android:padding="6dp"
                    android:layout_marginBottom="3dp"
                    android:textSize="12sp"
                    android:textColor="@android:color/white"
                    />
            </FrameLayout>
            <android.support.v7.widget.Toolbar
                android:id="@+id/view_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nsv_scroller"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:scrollbars="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <WebView
                android:id="@+id/wv_detail_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:isScrollContainer="false"
                android:overScrollMode="never"
                android:scrollbars="vertical"/>
            <com.victor.loading.rotate.RotateLoading
                android:id="@+id/view_loading"
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:loading_width="5dp"
                app:loading_color="@color/colorPrimary"
                android:layout_gravity="center"/>
        </FrameLayout>
    </android.support.v4.widget.NestedScrollView>
    <LinearLayout
        android:id="@+id/ll_detail_bottom"
        android:elevation="3dp"
        android:padding="3dp"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:background="@android:color/white"
        android:layout_height="@dimen/detail_bottom_height">
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="2"/>
        <TextView
            android:id="@+id/tv_detail_bottom_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/bottom_text"
            android:drawableTop="@mipmap/ic_star"
            android:drawablePadding="3dp"
            android:text="@string/detail_bottom_like"/>
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="3"/>
        <TextView
            android:id="@+id/tv_detail_bottom_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/bottom_text"
            android:drawableTop="@mipmap/ic_comment"
            android:drawablePadding="3dp"
            android:text="@string/detail_bottom_commit"/>
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="3"/>
        <TextView
            android:id="@+id/tv_detail_bottom_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/bottom_text"
            android:drawableTop="@mipmap/ic_share"
            android:drawablePadding="3dp"
            android:text="@string/detail_bottom_share"/>
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="2"/>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>